# chromatic

./: .gitignore  Cargo.toml  LICENSE  README.md  ds.rs
examples/: cmap.rs  gradient.rs  grey_image.txt  test.rs
legacy/: mod.rs
legacy/colour_map/: init.rs
legacy/grey/: bytes.rs  lerp.rs  mix.rs  set.rs  str.rs
legacy/grey_alpha/: bytes.rs  clone.rs  mix.rs  tolerance.rs
legacy/rgb/: clone.rs  lerp.rs  mod.rs  set.rs  str.rs
legacy/rgba/: bytes.rs  clone.rs  debug.rs  eq.rs  init.rs  lerp.rs  mod.rs  str.rs
scripts/: print_src.sh
src/: channel.rs  colour.rs  colour_map.rs  colour_map_error.rs  colour_parse_error.rs  config.rs  convert.rs  lib.rs  parse_colour_error.rs
src/colour_map/: fmt.rs  mod.rs
src/colours/: grey.rs  grey_alpha.rs  lab_rgb.rs  lab_rgba.rs  lab_utils.rs  mod.rs  parse_colour_error.rs  rgb.rs  rgba.rs
src/error/: colour_map.rs  colour_parsing.rs  conversion.rs  interpolation.rs  mod.rs  numeric.rs
src/spaces/: grey.rs  grey_alpha.rs  hsl.rs  hsl_alpha.rs  hsv.rs  hsv_alpha.rs  lab.rs  lab_alpha.rs  mod.rs  rgb.rs  rgb_alpha.rs  srgb.rs  srgb_alpha.rs  transparent.rs  xyz.rs  xyz_alpha.rs
src/traits/: colour.rs  convert.rs  mod.rs
tests/: channel.rs  colour_map.rs  colour_map_rgb.rs  grey.rs  grey_alpha_creation.rs  grey_alpha_from_str.rs  grey_alpha_lerp.rs  grey_alpha_to_string.rs  grey_creation.rs  grey_from_str.rs  grey_init.rs  grey_lerp.rs  grey_to_string.rs  mod.rs  rgb.rs  rgb_creation.rs  rgb_from_str.rs  rgb_lerp.rs  rgba_creation.rs  rgba_from_str.rs  rgba_lerp.rs
tests/colour_map/: grey.rs  grey_alpha.rs  mod.rs
(+115 files in other folders)
