[package]
name = "chromatic"
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/FreddyWordingham/chromatic"
description = "A small utility library for building and sampling colour maps."
keywords = [
    "color",
    "colour",
    "map",
    "rgb",
    "rgba",
    "greyscale",
    "greyscalealpha",
]
categories = ["graphics", "visualization"]

[dependencies]
image = "0.25.6"
num-traits = "0.2.19"

[dev-dependencies]
# image = "0.25.6"
# ndarray = "0.16.1"
