[package]
name = "chromatic"
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/FreddyWordingham/chromatic"
description = "A small utility library for building and sampling colour maps."
keywords = ["alpha", "colour", "greyscale", "map", "rgba"]
categories = ["graphics", "visualization"]

[dependencies]
num-traits = "0.2.19"

[dev-dependencies]
image = "0.25.6"
