[package]
name = "chromatic"
version = "0.0.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/FreddyWordingham/chromatic"
description = "A small utility library for building and sampling colour maps."
keywords = ["alpha", "colour", "greyscale", "map", "rgba"]
categories = ["graphics", "visualization"]

[dependencies]
assert_approx_eq = "1.1.0"
num-traits = "0.2.19"
terminal_size = "0.4.2"
